# kyc-test

./: .gitignore  Passphrases.txt  README.md  Solana Address.txt  Solana Wallet Address.txt  package-lock.json  package.json
Rust/: nft_mint.rs  presale.rs
data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-7905913773136502560.wt  collection-2-7905913773136502560.wt  index-1-7905913773136502560.wt  index-3-7905913773136502560.wt  sizeStorer.wt
data/db/diagnostic.data/: metrics.2025-02-18T21-50-10Z-00000  metrics.2025-02-19T10-54-25Z-00000  metrics.2025-02-22T11-59-00Z-00000  metrics.2025-03-13T02-56-18Z-00000  metrics.2025-03-13T10-02-40Z-00000  metrics.interim
server/: ReferralService.cs  get_address.js  kyc_wallet.json  package-lock.json  package.json  server-backup.js  server.js
server/kyc_blockchain/: Anchor.toml  Cargo.lock.bak  Cargo.toml  Dockerfile  buffer-presale.json  ephemeral-keypair.json  f_WebsiteKYCkyc-projectkyckyc_blockchaintargetdeploykyc_blockchain-keypair.json  mint-keypair.json  mint.txt  nft-mint-ephemeral.json  package-lock.json  package.json  presale-keypair.json  solana-program-2.2.0.crate  vault-keypair.json
server/kyc_blockchain/New folder/New folder/kyc_blockchain/: Cargo.toml
server/kyc_blockchain/New folder/New folder/kyc_blockchain/src/: lib.rs
server/kyc_blockchain/New folder/new/: new  presale.json
server/kyc_blockchain/New folder/reward/: reward.rs
server/kyc_blockchain/keys/: presale-keypair.json
server/kyc_blockchain/local/solana-program/: .cargo_vcs_info.json  Cargo.toml
server/kyc_blockchain/programs/kyc_blockchain/: Cargo.toml
server/kyc_blockchain/programs/kyc_blockchain/src/: lib.rs
server/kyc_blockchain/programs/nft_mint/: Cargo.toml
server/kyc_blockchain/programs/nft_mint/src/: lib.rs
server/kyc_blockchain/programs/presale/: Cargo.toml
server/kyc_blockchain/programs/presale/src/: lib.rs
server/kyc_blockchain/programs/smart_contract/: Cargo.toml
server/kyc_blockchain/programs/smart_contract/src/: lib.rs
server/kyc_blockchain/tests/: kyc-blockchain.ts
src/: AdminPanel.js  App.css  App.js  App_fixed.css  LoginPage.css  LoginPage.js  MainApp.js  MintNFT.js  index.js  login.html
src/pages/AboutUs/: about.css  index.js
src/pages/ConfessAndEarn/: backup.js  confess.css  index.js
src/pages/ContactAndSupport -1/: contact.css  index.js
src/pages/Game/: game.css  index.js
src/pages/Good/: backup.js  good.css  index.js
src/pages/Help/: help.css  index.js
src/pages/Home/: home.css  index.js
src/pages/Lock/: index.js  lock.css
src/pages/Login/: backup-security-key.js  backup.js  index.js  login.css
src/pages/Login/indexW/: captcha.js
src/pages/Mint-1/: index.js  mint.css
src/pages/Presale/: index.js  presale.css
src/pages/Profile/: index.js  profile.css
src/pages/Purchase-1/: index.js  purchase.css
src/pages/RoadMap/: index.js  rmap.css
src/pages/SignUp/: SignUp.css  index.js
src/pages/Skey/: index.js  skey.css
src/pages/Stats/: index.js  stats.css
src/pages/Whitepaper/: index.js  style.css  wpaper.css
src/pages/dashboard/: dashboard.css  index.js
