#workspace

[workspace]
members = [
    "programs/kyc_blockchain",
    "programs/presale",
    "programs/nft_mint",
    "programs/smart_contract",
]

resolver = "2"

[workspace.dependencies]
bincode         = "1.3.3"
blake3          = "1.3.1"
borsh           = "0.10.4"
bs58            = "0.5.1"
bv              = "0.11.1"
bytemuck        = "1.13.1"
itertools       = "0.12.3"
lazy_static     = "1.5.0"
log             = "0.4.26"
memoffset       = "0.6.5"
num-derive      = "0.3.3"
num-traits      = "0.2.14"
rustversion     = "1.0.10"
serde           = "1.0.188"
serde_bytes     = "0.11.15"
solana-program  = "1.17.17"
solana-sdk      = "1.17.17"
anchor-lang     = "0.30.0"
anchor-spl      = "0.30.0"

[profile.release]
opt-level   = "z"
lto         = true
codegen-units = 1
panic       = "abort"
overflow-checks = false
strip       = "symbols"
incremental = false

[workspace.package]
edition    = "2021"
version    = "0.1.0"
authors    = ["KYC <kyc@kyc.com>"]
homepage   = "https://ivan1357777.github.io/kyc-demo/"
license    = "MIT"
repository = "https://ivan1357777.github.io/kyc-demo/"

[patch.crates-io]
bytemuck_derive = { path = "./local/bytemuck_derive/derive" }
