[package]
name = "kyc_blockchain"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "1.17.17"
borsh = "0.10.4"
borsh-derive = "0.10.4"
bytemuck = { version = "1.13.1", features = ["derive"] }
bytemuck_derive = "1.9.2"
