[package]
name = "smart_contract"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0" }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[patch.crates-io]
anchor-attribute-program = { version = "0.30.0" }
anchor-derive-accounts = { version = "0.30.0" }
solana-program = { version = "1.17.17" }
